
- no initialization/cleanup can be done in wxApp/~wxApp because they are
  now called much earlier/later than before; please move any exiting code
  from there to wxApp::OnInit()/OnExit()
- also, OnExit() is not called if OnInit() fails
- wxTheApp can't be assigned to any longer, use wxApp::SetInstance() instead
- wxFileType::GetIcon() returns wxIconLocation, not wxIcon


DEPRECATED METHODS SINCE 2.4.x
==============================

Deprecated methods may still be used but will disappear in future wxWindows
versions, please update your code to not use them.

- wxDocManager::GetNoHistoryFiles() renamed to GetHistoryFilesCount()
- wxSizer::Remove(wxWindow *), use Detach() instead [it is more clear]
- wxSizer::Set/GetOption(): use Set/GetProportion() instead
- wxKeyEvent::KeyCode(): use GetKeyCode instead
- wxList::Number, First, Last, Nth: use GetCount, GetFirst/Last, Item instead
- wxNode::Next, Previous, Data: use GetNext, GetPrevious, GetData instead
- wxListBase::operator wxList&(): use typesafe lists instead
- wxTheFontMapper: use wxFontMapper::Get() instead
- wxStringHashTable: use wxHashMap instead
- wxHashTableLong: use wxHashMap instead
- wxArrayString::GetStringArray: no replacement
- wxArrayString::Remove(index, count): use RemoveAt instead
- wxTreeItemId conversion to long is deprecated and shouldn't be used
- [MSW only] wxWindow::GetUseCtl3D(), GetTransparentBackground() and
             SetTransparent() as well as wxNO_3D and wxUSER_COLOURS styles


OTHER CHANGES
=============

2.5.0
-----

All:

- It is now possible to build several smaller libraries instead of single
  huge wxWindows library; wxBase is now dependency of GUI ports rather then
  separately compiled library
- added wxDateSpan::operator==() and !=() (Lukasz Michalski)
- added wxFileName::GetForbiddenChars() (Dimitri Schoolwerth)
- use true/false throughout the library instead of TRUE/FALSE
- wxStopWatch::Start() resumes the stop watch if paused, as per the docs