@@ -245,9 +245,9 @@ or {\tt wxBOTH}.}
 
 \helpref{wxWindow::CentreOnParent}{wxwindowcenteronparent}
 
-\membersection{wxWindow::Clear}\label{wxwindowclear}
+\membersection{wxWindow::ClearBackground}\label{wxwindowclearbackground}
 
-\func{void}{Clear}{\void}
+\func{void}{ClearBackground}{\void}
 
 Clears the window by filling it with the current background colour. Does not
 cause an erase background event to be generated.
