@@ -84,7 +84,6 @@ public:
 
     virtual void Refresh( bool eraseBackground = TRUE,
                           const wxRect *rect = (const wxRect *) NULL );
-    virtual void Clear();
 
     virtual bool SetCursor( const wxCursor &cursor );
     virtual bool SetFont(const wxFont& font)
