@@ -95,7 +95,6 @@ public:
     virtual void Refresh( bool eraseBackground = TRUE,
                           const wxRect *rect = (const wxRect *) NULL );
     virtual void Update();
-    virtual void Clear();
     virtual void Freeze();
     virtual void Thaw();
 
